# OpenChemTools

./: Dockerfile  main.py  pyproject.toml
tools/: conformer.py  pyscf_tools.py  representation_tools.py
